Bug 1228822 - Ensure we send out the window update when matching a pushed stream with a pull stream. r=mcmanus